src/deps/imgui/ext/implot/c/cimplot.h

typedef struct ImPlotTickCollection ImPlotTickCollection;
typedef struct ImPlotAnnotationCollection ImPlotAnnotationCollection;
typedef struct ImPlotPointError ImPlotPointError;
typedef struct ImPlotColormapData ImPlotColormapData;
typedef struct ImPlotTime ImPlotTime;
typedef struct ImPlotDateTimeFmt ImPlotDateTimeFmt;
typedef struct ImPlotInputMap ImPlotInputMap;
typedef struct ImBufferWriter ImBufferWriter;
typedef struct ImPlotTick ImPlotTick;
typedef int ImPlotColormap;
struct ImPlotTick;
typedef int ImPlotDateFmt;
typedef int ImPlotTimeFmt;
typedef struct ImVector_ImPlotAnnotation {int Size;int Capacity;ImPlotAnnotation* Data;} ImVector_ImPlotAnnotation;
typedef struct ImVector_ImPlotTick {int Size;int Capacity;ImPlotTick* Data;} ImVector_ImPlotTick;
typedef struct ImVector_bool {int Size;int Capacity;bool* Data;} ImVector_bool;
typedef struct ImVector_int {int Size;int Capacity;int* Data;} ImVector_int;
struct ImBufferWriter
{
    char* Buffer;
    int Size;
    int Pos;
};
struct ImPlotInputMap
{
    ImGuiMouseButton PanButton;
    ImGuiKeyModFlags PanMod;
    ImGuiMouseButton FitButton;
    ImGuiMouseButton ContextMenuButton;
    ImGuiMouseButton BoxSelectButton;
    ImGuiKeyModFlags BoxSelectMod;
    ImGuiMouseButton BoxSelectCancelButton;
    ImGuiMouseButton QueryButton;
    ImGuiKeyModFlags QueryMod;
    ImGuiKeyModFlags QueryToggleMod;
    ImGuiKeyModFlags HorizontalMod;
    ImGuiKeyModFlags VerticalMod;
};
struct ImPlotDateTimeFmt
{
    ImPlotDateFmt Date;
    ImPlotTimeFmt Time;
    bool UseISO8601;
    bool Use24HourClock;
};
struct ImPlotTime
{
    time_t S;
    int Us;
};
struct ImPlotColormapData
{
    ImVector_ImU32 Keys;
    ImVector_int KeyCounts;
    ImVector_int KeyOffsets;
    ImVector_ImU32 Tables;
    ImVector_int TableSizes;
    ImVector_int TableOffsets;
    ImGuiTextBuffer Text;
    ImVector_int TextOffsets;
    ImVector_bool Quals;
    ImGuiStorage Map;
    int Count;
};
struct ImPlotPointError
{
    double X, Y, Neg, Pos;
};
struct ImPlotAnnotationCollection
{
    ImVector_ImPlotAnnotation Annotations;
    ImGuiTextBuffer TextBuffer;
    int Size;
};
struct ImPlotTick
{
    double PlotPos;
    float PixelPos;
    ImVec2 LabelSize;
    int TextOffset;
    bool Major;
    bool ShowLabel;
    int Level;
};
struct ImPlotTickCollection
{
    ImVector_ImPlotTick Ticks;
    ImGuiTextBuffer TextBuffer;
    float TotalWidthMax;
    float TotalWidth;
    float TotalHeight;
    float MaxWidth;
    float MaxHeight;
    int Size;
};
typedef ImVector<ImPlotAnnotation> ImVector_ImPlotAnnotation;
typedef ImVector<ImPlotTick> ImVector_ImPlotTick;
typedef ImVector<ImU32> ImVector_ImU32;
typedef ImVector<bool> ImVector_bool;
typedef ImVector<int> ImVector_int;
CIMGUI_API ImU32 ImPlot_ImRemap_U32(ImU32 x,ImU32 x0,ImU32 x1,ImU32 y0,ImU32 y1);
CIMGUI_API ImS64 ImPlot_ImRemap_S64(ImS64 x,ImS64 x0,ImS64 x1,ImS64 y0,ImS64 y1);
CIMGUI_API ImU64 ImPlot_ImRemap_U64(ImU64 x,ImU64 x0,ImU64 x1,ImU64 y0,ImU64 y1);
CIMGUI_API float ImPlot_ImRemap01_Float(float x,float x0,float x1);
CIMGUI_API double ImPlot_ImRemap01_double(double x,double x0,double x1);
CIMGUI_API ImS8 ImPlot_ImRemap01_S8(ImS8 x,ImS8 x0,ImS8 x1);
CIMGUI_API ImU8 ImPlot_ImRemap01_U8(ImU8 x,ImU8 x0,ImU8 x1);
CIMGUI_API ImS16 ImPlot_ImRemap01_S16(ImS16 x,ImS16 x0,ImS16 x1);
CIMGUI_API ImU16 ImPlot_ImRemap01_U16(ImU16 x,ImU16 x0,ImU16 x1);
CIMGUI_API ImS32 ImPlot_ImRemap01_S32(ImS32 x,ImS32 x0,ImS32 x1);
CIMGUI_API ImU32 ImPlot_ImRemap01_U32(ImU32 x,ImU32 x0,ImU32 x1);
CIMGUI_API ImS64 ImPlot_ImRemap01_S64(ImS64 x,ImS64 x0,ImS64 x1);
CIMGUI_API ImU64 ImPlot_ImRemap01_U64(ImU64 x,ImU64 x0,ImU64 x1);
CIMGUI_API int ImPlot_ImPosMod(int l,int r);
CIMGUI_API bool ImPlot_ImNanOrInf(double val);
CIMGUI_API double ImPlot_ImConstrainNan(double val);
CIMGUI_API double ImPlot_ImConstrainInf(double val);
CIMGUI_API double ImPlot_ImConstrainLog(double val);
CIMGUI_API double ImPlot_ImConstrainTime(double val);
CIMGUI_API bool ImPlot_ImAlmostEqual(double v1,double v2,int ulp);
CIMGUI_API float ImPlot_ImMinArray_FloatPtr(const float* values,int count);
CIMGUI_API double ImPlot_ImMinArray_doublePtr(const double* values,int count);
CIMGUI_API ImS8 ImPlot_ImMinArray_S8Ptr(const ImS8* values,int count);
CIMGUI_API ImU8 ImPlot_ImMinArray_U8Ptr(const ImU8* values,int count);
CIMGUI_API ImS16 ImPlot_ImMinArray_S16Ptr(const ImS16* values,int count);
CIMGUI_API ImU16 ImPlot_ImMinArray_U16Ptr(const ImU16* values,int count);
CIMGUI_API ImS32 ImPlot_ImMinArray_S32Ptr(const ImS32* values,int count);
CIMGUI_API ImU32 ImPlot_ImMinArray_U32Ptr(const ImU32* values,int count);
CIMGUI_API ImS64 ImPlot_ImMinArray_S64Ptr(const ImS64* values,int count);
CIMGUI_API ImU64 ImPlot_ImMinArray_U64Ptr(const ImU64* values,int count);
CIMGUI_API float ImPlot_ImMaxArray_FloatPtr(const float* values,int count);
CIMGUI_API double ImPlot_ImMaxArray_doublePtr(const double* values,int count);
CIMGUI_API ImS8 ImPlot_ImMaxArray_S8Ptr(const ImS8* values,int count);
CIMGUI_API ImU8 ImPlot_ImMaxArray_U8Ptr(const ImU8* values,int count);
CIMGUI_API ImS16 ImPlot_ImMaxArray_S16Ptr(const ImS16* values,int count);
CIMGUI_API ImU16 ImPlot_ImMaxArray_U16Ptr(const ImU16* values,int count);
CIMGUI_API ImS32 ImPlot_ImMaxArray_S32Ptr(const ImS32* values,int count);
CIMGUI_API ImU32 ImPlot_ImMaxArray_U32Ptr(const ImU32* values,int count);
CIMGUI_API ImS64 ImPlot_ImMaxArray_S64Ptr(const ImS64* values,int count);
CIMGUI_API ImU64 ImPlot_ImMaxArray_U64Ptr(const ImU64* values,int count);
CIMGUI_API void ImPlot_ImMinMaxArray_FloatPtr(const float* values,int count,float* min_out,float* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_doublePtr(const double* values,int count,double* min_out,double* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_S8Ptr(const ImS8* values,int count,ImS8* min_out,ImS8* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_U8Ptr(const ImU8* values,int count,ImU8* min_out,ImU8* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_S16Ptr(const ImS16* values,int count,ImS16* min_out,ImS16* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_U16Ptr(const ImU16* values,int count,ImU16* min_out,ImU16* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_S32Ptr(const ImS32* values,int count,ImS32* min_out,ImS32* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_U32Ptr(const ImU32* values,int count,ImU32* min_out,ImU32* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_S64Ptr(const ImS64* values,int count,ImS64* min_out,ImS64* max_out);
CIMGUI_API void ImPlot_ImMinMaxArray_U64Ptr(const ImU64* values,int count,ImU64* min_out,ImU64* max_out);
CIMGUI_API float ImPlot_ImSum_FloatPtr(const float* values,int count);
CIMGUI_API double ImPlot_ImSum_doublePtr(const double* values,int count);
CIMGUI_API ImS8 ImPlot_ImSum_S8Ptr(const ImS8* values,int count);
CIMGUI_API ImU8 ImPlot_ImSum_U8Ptr(const ImU8* values,int count);
CIMGUI_API ImS16 ImPlot_ImSum_S16Ptr(const ImS16* values,int count);
CIMGUI_API ImU16 ImPlot_ImSum_U16Ptr(const ImU16* values,int count);
CIMGUI_API ImS32 ImPlot_ImSum_S32Ptr(const ImS32* values,int count);
CIMGUI_API ImU32 ImPlot_ImSum_U32Ptr(const ImU32* values,int count);
CIMGUI_API ImS64 ImPlot_ImSum_S64Ptr(const ImS64* values,int count);
CIMGUI_API ImU64 ImPlot_ImSum_U64Ptr(const ImU64* values,int count);
CIMGUI_API double ImPlot_ImMean_FloatPtr(const float* values,int count);
CIMGUI_API double ImPlot_ImMean_doublePtr(const double* values,int count);
CIMGUI_API double ImPlot_ImMean_S8Ptr(const ImS8* values,int count);
CIMGUI_API double ImPlot_ImMean_U8Ptr(const ImU8* values,int count);
CIMGUI_API double ImPlot_ImMean_S16Ptr(const ImS16* values,int count);
CIMGUI_API double ImPlot_ImMean_U16Ptr(const ImU16* values,int count);
CIMGUI_API double ImPlot_ImMean_S32Ptr(const ImS32* values,int count);
CIMGUI_API double ImPlot_ImMean_U32Ptr(const ImU32* values,int count);
CIMGUI_API double ImPlot_ImMean_S64Ptr(const ImS64* values,int count);
CIMGUI_API double ImPlot_ImMean_U64Ptr(const ImU64* values,int count);
CIMGUI_API double ImPlot_ImStdDev_FloatPtr(const float* values,int count);
CIMGUI_API double ImPlot_ImStdDev_doublePtr(const double* values,int count);
CIMGUI_API double ImPlot_ImStdDev_S8Ptr(const ImS8* values,int count);
CIMGUI_API double ImPlot_ImStdDev_U8Ptr(const ImU8* values,int count);
CIMGUI_API double ImPlot_ImStdDev_S16Ptr(const ImS16* values,int count);
CIMGUI_API double ImPlot_ImStdDev_U16Ptr(const ImU16* values,int count);
CIMGUI_API double ImPlot_ImStdDev_S32Ptr(const ImS32* values,int count);
CIMGUI_API double ImPlot_ImStdDev_U32Ptr(const ImU32* values,int count);
CIMGUI_API double ImPlot_ImStdDev_S64Ptr(const ImS64* values,int count);
CIMGUI_API double ImPlot_ImStdDev_U64Ptr(const ImU64* values,int count);
CIMGUI_API ImU32 ImPlot_ImMixU32(ImU32 a,ImU32 b,ImU32 s);
CIMGUI_API ImU32 ImPlot_ImLerpU32(const ImU32* colors,int size,float t);
CIMGUI_API ImU32 ImPlot_ImAlphaU32(ImU32 col,float alpha);
CIMGUI_API ImBufferWriter* ImBufferWriter_ImBufferWriter(char* buffer,int size);
CIMGUI_API void ImBufferWriter_destroy(ImBufferWriter* self);
CIMGUI_API void ImBufferWriter_Write(ImBufferWriter* self,const char* fmt,...);
CIMGUI_API ImPlotInputMap* ImPlotInputMap_ImPlotInputMap(void);
CIMGUI_API void ImPlotInputMap_destroy(ImPlotInputMap* self);
CIMGUI_API ImPlotDateTimeFmt* ImPlotDateTimeFmt_ImPlotDateTimeFmt(ImPlotDateFmt date_fmt,ImPlotTimeFmt time_fmt,bool use_24_hr_clk,bool use_iso_8601);
CIMGUI_API void ImPlotDateTimeFmt_destroy(ImPlotDateTimeFmt* self);
CIMGUI_API ImPlotTime* ImPlotTime_ImPlotTime_Nil(void);
CIMGUI_API void ImPlotTime_destroy(ImPlotTime* self);
CIMGUI_API ImPlotTime* ImPlotTime_ImPlotTime_time_t(time_t s,int us);
CIMGUI_API void ImPlotTime_RollOver(ImPlotTime* self);
CIMGUI_API double ImPlotTime_ToDouble(ImPlotTime* self);
CIMGUI_API void ImPlotTime_FromDouble(ImPlotTime *pOut,double t);
CIMGUI_API ImPlotColormapData* ImPlotColormapData_ImPlotColormapData(void);
CIMGUI_API void ImPlotColormapData_destroy(ImPlotColormapData* self);
CIMGUI_API int ImPlotColormapData_Append(ImPlotColormapData* self,const char* name,const ImU32* keys,int count,bool qual);
CIMGUI_API void ImPlotColormapData__AppendTable(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API void ImPlotColormapData_RebuildTables(ImPlotColormapData* self);
CIMGUI_API bool ImPlotColormapData_IsQual(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API const char* ImPlotColormapData_GetName(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API ImPlotColormap ImPlotColormapData_GetIndex(ImPlotColormapData* self,const char* name);
CIMGUI_API const ImU32* ImPlotColormapData_GetKeys(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API int ImPlotColormapData_GetKeyCount(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API ImU32 ImPlotColormapData_GetKeyColor(ImPlotColormapData* self,ImPlotColormap cmap,int idx);
CIMGUI_API void ImPlotColormapData_SetKeyColor(ImPlotColormapData* self,ImPlotColormap cmap,int idx,ImU32 value);
CIMGUI_API const ImU32* ImPlotColormapData_GetTable(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API int ImPlotColormapData_GetTableSize(ImPlotColormapData* self,ImPlotColormap cmap);
CIMGUI_API ImU32 ImPlotColormapData_GetTableColor(ImPlotColormapData* self,ImPlotColormap cmap,int idx);
CIMGUI_API ImU32 ImPlotColormapData_LerpTable(ImPlotColormapData* self,ImPlotColormap cmap,float t);
CIMGUI_API ImPlotPointError* ImPlotPointError_ImPlotPointError(double x,double y,double neg,double pos);
CIMGUI_API void ImPlotPointError_destroy(ImPlotPointError* self);
CIMGUI_API ImPlotAnnotationCollection* ImPlotAnnotationCollection_ImPlotAnnotationCollection(void);
CIMGUI_API void ImPlotAnnotationCollection_destroy(ImPlotAnnotationCollection* self);
CIMGUI_API void ImPlotAnnotationCollection_Append(ImPlotAnnotationCollection* self,const ImVec2 pos,const ImVec2 off,ImU32 bg,ImU32 fg,bool clamp,const char* fmt,...);
CIMGUI_API const char* ImPlotAnnotationCollection_GetText(ImPlotAnnotationCollection* self,int idx);
CIMGUI_API void ImPlotAnnotationCollection_Reset(ImPlotAnnotationCollection* self);
CIMGUI_API ImPlotTick* ImPlotTick_ImPlotTick(double value,bool major,bool show_label);
CIMGUI_API void ImPlotTick_destroy(ImPlotTick* self);
CIMGUI_API ImPlotTickCollection* ImPlotTickCollection_ImPlotTickCollection(void);
CIMGUI_API void ImPlotTickCollection_destroy(ImPlotTickCollection* self);
CIMGUI_API const ImPlotTick* ImPlotTickCollection_Append_PlotTick(ImPlotTickCollection* self,const ImPlotTick tick);
CIMGUI_API const ImPlotTick* ImPlotTickCollection_Append_double(ImPlotTickCollection* self,double value,bool major,bool show_label,const char* fmt);