src/deps/imgui/ext/implot/c.zig

pub extern fn ImPlot_ImRemap_U32(x: imgui.ImU32, x0: imgui.ImU32, x1: imgui.ImU32, y0: imgui.ImU32, y1: imgui.ImU32) imgui.ImU32;
pub extern fn ImPlot_ImRemap_S64(x: imgui.ImS64, x0: imgui.ImS64, x1: imgui.ImS64, y0: imgui.ImS64, y1: imgui.ImS64) imgui.ImS64;
pub extern fn ImPlot_ImRemap_U64(x: imgui.ImU64, x0: imgui.ImU64, x1: imgui.ImU64, y0: imgui.ImU64, y1: imgui.ImU64) imgui.ImU64;
pub extern fn ImPlot_ImRemap01_Float(x: f32, x0: f32, x1: f32) f32;
pub extern fn ImPlot_ImRemap01_double(x: f64, x0: f64, x1: f64) f64;
pub extern fn ImPlot_ImRemap01_S8(x: imgui.ImS8, x0: imgui.ImS8, x1: imgui.ImS8) imgui.ImS8;
pub extern fn ImPlot_ImRemap01_U8(x: imgui.ImU8, x0: imgui.ImU8, x1: imgui.ImU8) imgui.ImU8;
pub extern fn ImPlot_ImRemap01_S16(x: imgui.ImS16, x0: imgui.ImS16, x1: imgui.ImS16) imgui.ImS16;
pub extern fn ImPlot_ImRemap01_U16(x: imgui.ImU16, x0: imgui.ImU16, x1: imgui.ImU16) imgui.ImU16;
pub extern fn ImPlot_ImRemap01_S32(x: imgui.ImS32, x0: imgui.ImS32, x1: imgui.ImS32) imgui.ImS32;
pub extern fn ImPlot_ImRemap01_U32(x: imgui.ImU32, x0: imgui.ImU32, x1: imgui.ImU32) imgui.ImU32;
pub extern fn ImPlot_ImRemap01_S64(x: imgui.ImS64, x0: imgui.ImS64, x1: imgui.ImS64) imgui.ImS64;
pub extern fn ImPlot_ImRemap01_U64(x: imgui.ImU64, x0: imgui.ImU64, x1: imgui.ImU64) imgui.ImU64;
pub extern fn ImPlot_ImPosMod(l: c_int, r: c_int) c_int;
pub extern fn ImPlot_ImNanOrInf(val: f64) bool;
pub extern fn ImPlot_ImConstrainNan(val: f64) f64;
pub extern fn ImPlot_ImConstrainInf(val: f64) f64;
pub extern fn ImPlot_ImConstrainLog(val: f64) f64;
pub extern fn ImPlot_ImConstrainTime(val: f64) f64;
pub extern fn ImPlot_ImAlmostEqual(v1: f64, v2: f64, ulp: c_int) bool;
pub extern fn ImPlot_ImMinArray_FloatPtr(values: [*c]const f32, count: c_int) f32;
pub extern fn ImPlot_ImMinArray_doublePtr(values: [*c]const f64, count: c_int) f64;
pub extern fn ImPlot_ImMinArray_S8Ptr(values: [*c]const imgui.ImS8, count: c_int) imgui.ImS8;
pub extern fn ImPlot_ImMinArray_U8Ptr(values: [*c]const imgui.ImU8, count: c_int) imgui.ImU8;
pub extern fn ImPlot_ImMinArray_S16Ptr(values: [*c]const imgui.ImS16, count: c_int) imgui.ImS16;
pub extern fn ImPlot_ImMinArray_U16Ptr(values: [*c]const imgui.ImU16, count: c_int) imgui.ImU16;
pub extern fn ImPlot_ImMinArray_S32Ptr(values: [*c]const imgui.ImS32, count: c_int) imgui.ImS32;
pub extern fn ImPlot_ImMinArray_U32Ptr(values: [*c]const imgui.ImU32, count: c_int) imgui.ImU32;
pub extern fn ImPlot_ImMinArray_S64Ptr(values: [*c]const imgui.ImS64, count: c_int) imgui.ImS64;
pub extern fn ImPlot_ImMinArray_U64Ptr(values: [*c]const imgui.ImU64, count: c_int) imgui.ImU64;
pub extern fn ImPlot_ImMaxArray_FloatPtr(values: [*c]const f32, count: c_int) f32;
pub extern fn ImPlot_ImMaxArray_doublePtr(values: [*c]const f64, count: c_int) f64;
pub extern fn ImPlot_ImMaxArray_S8Ptr(values: [*c]const imgui.ImS8, count: c_int) imgui.ImS8;
pub extern fn ImPlot_ImMaxArray_U8Ptr(values: [*c]const imgui.ImU8, count: c_int) imgui.ImU8;
pub extern fn ImPlot_ImMaxArray_S16Ptr(values: [*c]const imgui.ImS16, count: c_int) imgui.ImS16;
pub extern fn ImPlot_ImMaxArray_U16Ptr(values: [*c]const imgui.ImU16, count: c_int) imgui.ImU16;
pub extern fn ImPlot_ImMaxArray_S32Ptr(values: [*c]const imgui.ImS32, count: c_int) imgui.ImS32;
pub extern fn ImPlot_ImMaxArray_U32Ptr(values: [*c]const imgui.ImU32, count: c_int) imgui.ImU32;
pub extern fn ImPlot_ImMaxArray_S64Ptr(values: [*c]const imgui.ImS64, count: c_int) imgui.ImS64;
pub extern fn ImPlot_ImMaxArray_U64Ptr(values: [*c]const imgui.ImU64, count: c_int) imgui.ImU64;
pub extern fn ImPlot_ImMinMaxArray_FloatPtr(values: [*c]const f32, count: c_int, min_out: [*c]f32, max_out: [*c]f32) void;
pub extern fn ImPlot_ImMinMaxArray_doublePtr(values: [*c]const f64, count: c_int, min_out: [*c]f64, max_out: [*c]f64) void;
pub extern fn ImPlot_ImMinMaxArray_S8Ptr(values: [*c]const imgui.ImS8, count: c_int, min_out: [*c]imgui.ImS8, max_out: [*c]imgui.ImS8) void;
pub extern fn ImPlot_ImMinMaxArray_U8Ptr(values: [*c]const imgui.ImU8, count: c_int, min_out: [*c]imgui.ImU8, max_out: [*c]imgui.ImU8) void;
pub extern fn ImPlot_ImMinMaxArray_S16Ptr(values: [*c]const imgui.ImS16, count: c_int, min_out: [*c]imgui.ImS16, max_out: [*c]imgui.ImS16) void;
pub extern fn ImPlot_ImMinMaxArray_U16Ptr(values: [*c]const imgui.ImU16, count: c_int, min_out: [*c]imgui.ImU16, max_out: [*c]imgui.ImU16) void;
pub extern fn ImPlot_ImMinMaxArray_S32Ptr(values: [*c]const imgui.ImS32, count: c_int, min_out: [*c]imgui.ImS32, max_out: [*c]imgui.ImS32) void;
pub extern fn ImPlot_ImMinMaxArray_U32Ptr(values: [*c]const imgui.ImU32, count: c_int, min_out: [*c]imgui.ImU32, max_out: [*c]imgui.ImU32) void;
pub extern fn ImPlot_ImMinMaxArray_S64Ptr(values: [*c]const imgui.ImS64, count: c_int, min_out: [*c]imgui.ImS64, max_out: [*c]imgui.ImS64) void;
pub extern fn ImPlot_ImMinMaxArray_U64Ptr(values: [*c]const imgui.ImU64, count: c_int, min_out: [*c]imgui.ImU64, max_out: [*c]imgui.ImU64) void;
pub extern fn ImPlot_ImSum_FloatPtr(values: [*c]const f32, count: c_int) f32;
pub extern fn ImPlot_ImSum_doublePtr(values: [*c]const f64, count: c_int) f64;
pub extern fn ImPlot_ImSum_S8Ptr(values: [*c]const imgui.ImS8, count: c_int) imgui.ImS8;
pub extern fn ImPlot_ImSum_U8Ptr(values: [*c]const imgui.ImU8, count: c_int) imgui.ImU8;
pub extern fn ImPlot_ImSum_S16Ptr(values: [*c]const imgui.ImS16, count: c_int) imgui.ImS16;
pub extern fn ImPlot_ImSum_U16Ptr(values: [*c]const imgui.ImU16, count: c_int) imgui.ImU16;
pub extern fn ImPlot_ImSum_S32Ptr(values: [*c]const imgui.ImS32, count: c_int) imgui.ImS32;
pub extern fn ImPlot_ImSum_U32Ptr(values: [*c]const imgui.ImU32, count: c_int) imgui.ImU32;
pub extern fn ImPlot_ImSum_S64Ptr(values: [*c]const imgui.ImS64, count: c_int) imgui.ImS64;
pub extern fn ImPlot_ImSum_U64Ptr(values: [*c]const imgui.ImU64, count: c_int) imgui.ImU64;
pub extern fn ImPlot_ImMean_FloatPtr(values: [*c]const f32, count: c_int) f64;
pub extern fn ImPlot_ImMean_doublePtr(values: [*c]const f64, count: c_int) f64;
pub extern fn ImPlot_ImMean_S8Ptr(values: [*c]const imgui.ImS8, count: c_int) f64;
pub extern fn ImPlot_ImMean_U8Ptr(values: [*c]const imgui.ImU8, count: c_int) f64;
pub extern fn ImPlot_ImMean_S16Ptr(values: [*c]const imgui.ImS16, count: c_int) f64;
pub extern fn ImPlot_ImMean_U16Ptr(values: [*c]const imgui.ImU16, count: c_int) f64;
pub extern fn ImPlot_ImMean_S32Ptr(values: [*c]const imgui.ImS32, count: c_int) f64;
pub extern fn ImPlot_ImMean_U32Ptr(values: [*c]const imgui.ImU32, count: c_int) f64;
pub extern fn ImPlot_ImMean_S64Ptr(values: [*c]const imgui.ImS64, count: c_int) f64;
pub extern fn ImPlot_ImMean_U64Ptr(values: [*c]const imgui.ImU64, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_FloatPtr(values: [*c]const f32, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_doublePtr(values: [*c]const f64, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_S8Ptr(values: [*c]const imgui.ImS8, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_U8Ptr(values: [*c]const imgui.ImU8, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_S16Ptr(values: [*c]const imgui.ImS16, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_U16Ptr(values: [*c]const imgui.ImU16, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_S32Ptr(values: [*c]const imgui.ImS32, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_U32Ptr(values: [*c]const imgui.ImU32, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_S64Ptr(values: [*c]const imgui.ImS64, count: c_int) f64;
pub extern fn ImPlot_ImStdDev_U64Ptr(values: [*c]const imgui.ImU64, count: c_int) f64;
pub extern fn ImPlot_ImMixU32(a: imgui.ImU32, b: imgui.ImU32, s: imgui.ImU32) imgui.ImU32;
pub extern fn ImPlot_ImLerpU32(colors: [*c]const imgui.ImU32, size: c_int, t: f32) imgui.ImU32;
pub extern fn ImPlot_ImAlphaU32(col: imgui.ImU32, alpha: f32) imgui.ImU32;
pub extern fn ImBufferWriter_ImBufferWriter(buffer: [*c]u8, size: c_int) [*c]ImBufferWriter;
pub extern fn ImBufferWriter_destroy(self: [*c]ImBufferWriter) void;
pub extern fn ImBufferWriter_Write(self: [*c]ImBufferWriter, fmt: [*c]const u8, ...) void;
pub extern fn ImPlotInputMap_ImPlotInputMap() [*c]ImPlotInputMap;
pub extern fn ImPlotInputMap_destroy(self: [*c]ImPlotInputMap) void;
pub extern fn ImPlotDateTimeFmt_ImPlotDateTimeFmt(date_fmt: ImPlotDateFmt, time_fmt: ImPlotTimeFmt, use_24_hr_clk: bool, use_iso_8601: bool) [*c]ImPlotDateTimeFmt;
pub extern fn ImPlotDateTimeFmt_destroy(self: [*c]ImPlotDateTimeFmt) void;
pub extern fn ImPlotTime_ImPlotTime_Nil() [*c]ImPlotTime;
pub extern fn ImPlotTime_destroy(self: [*c]ImPlotTime) void;
pub extern fn ImPlotTime_ImPlotTime_time_t(s: time_t, us: c_int) [*c]ImPlotTime;
pub extern fn ImPlotTime_RollOver(self: [*c]ImPlotTime) void;
pub extern fn ImPlotTime_ToDouble(self: [*c]ImPlotTime) f64;
pub extern fn ImPlotTime_FromDouble(pOut: [*c]ImPlotTime, t: f64) void;
pub extern fn ImPlotColormapData_ImPlotColormapData() [*c]ImPlotColormapData;
pub extern fn ImPlotColormapData_destroy(self: [*c]ImPlotColormapData) void;
pub extern fn ImPlotColormapData_Append(self: [*c]ImPlotColormapData, name: [*c]const u8, keys: [*c]const imgui.ImU32, count: c_int, qual: bool) c_int;
pub extern fn ImPlotColormapData__AppendTable(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) void;
pub extern fn ImPlotColormapData_RebuildTables(self: [*c]ImPlotColormapData) void;
pub extern fn ImPlotColormapData_IsQual(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) bool;
pub extern fn ImPlotColormapData_GetName(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) [*c]const u8;
pub extern fn ImPlotColormapData_GetIndex(self: [*c]ImPlotColormapData, name: [*c]const u8) ImPlotColormap;
pub extern fn ImPlotColormapData_GetKeys(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) [*c]const imgui.ImU32;
pub extern fn ImPlotColormapData_GetKeyCount(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) c_int;
pub extern fn ImPlotColormapData_GetKeyColor(self: [*c]ImPlotColormapData, cmap: ImPlotColormap, idx: c_int) imgui.ImU32;
pub extern fn ImPlotColormapData_SetKeyColor(self: [*c]ImPlotColormapData, cmap: ImPlotColormap, idx: c_int, value: imgui.ImU32) void;
pub extern fn ImPlotColormapData_GetTable(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) [*c]const imgui.ImU32;
pub extern fn ImPlotColormapData_GetTableSize(self: [*c]ImPlotColormapData, cmap: ImPlotColormap) c_int;
pub extern fn ImPlotColormapData_GetTableColor(self: [*c]ImPlotColormapData, cmap: ImPlotColormap, idx: c_int) imgui.ImU32;
pub extern fn ImPlotColormapData_LerpTable(self: [*c]ImPlotColormapData, cmap: ImPlotColormap, t: f32) imgui.ImU32;
pub extern fn ImPlotPointError_ImPlotPointError(x: f64, y: f64, neg: f64, pos: f64) [*c]ImPlotPointError;
pub extern fn ImPlotPointError_destroy(self: [*c]ImPlotPointError) void;
pub extern fn ImPlotAnnotationCollection_ImPlotAnnotationCollection() [*c]ImPlotAnnotationCollection;
pub extern fn ImPlotAnnotationCollection_destroy(self: [*c]ImPlotAnnotationCollection) void;
pub extern fn ImPlotAnnotationCollection_Append(self: [*c]ImPlotAnnotationCollection, pos: imgui.ImVec2, off: imgui.ImVec2, bg: imgui.ImU32, fg: imgui.ImU32, clamp: bool, fmt: [*c]const u8, ...) void;
pub extern fn ImPlotAnnotationCollection_GetText(self: [*c]ImPlotAnnotationCollection, idx: c_int) [*c]const u8;
pub extern fn ImPlotAnnotationCollection_Reset(self: [*c]ImPlotAnnotationCollection) void;
pub extern fn ImPlotTick_ImPlotTick(value: f64, major: bool, show_label: bool) [*c]ImPlotTick;
pub extern fn ImPlotTick_destroy(self: [*c]ImPlotTick) void;
pub extern fn ImPlotTickCollection_ImPlotTickCollection() [*c]ImPlotTickCollection;
pub extern fn ImPlotTickCollection_destroy(self: [*c]ImPlotTickCollection) void;
pub extern fn ImPlotTickCollection_Append_PlotTick(self: [*c]ImPlotTickCollection, tick: ImPlotTick) [*c]const ImPlotTick;
pub extern fn ImPlotTickCollection_Append_double(self: [*c]ImPlotTickCollection, value: f64, major: bool, show_label: bool, fmt: [*c]const u8) [*c]const ImPlotTick;
